--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.0.*",
-		"way/generators": "dev-master"
+		"way/generators": "dev-master",
+		"barryvdh/laravel-ide-helper": "1.*"
 	},
 	"autoload": {
 		"classmap": [
@@ -27,7 +28,11 @@
 		],
 		"post-create-project-cmd": [
 			"php artisan key:generate"
-		]
+		],
+        "post-update-cmd":[
+            "php artisan ide-helper:generate",
+            "php artisan optimize"
+        ]
 	},
 	"config": {
 		"preferred-install": "dist"
